FSM-614-615: Fixed card alignment issue and inbox filters and patch release 2.5.1 (#341)
* FSM-614-615: Fixed card alignment issue and inbox filters

* FSM-617: Fixed localization code

* FSM-615: Fixed card alignment issue

* FSM-621: Fixed dso mobile inbox

* FSM-619: Fixed inbox pagination

* FSM-627: Fixed dso footer

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/citizen/container.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/citizen/container.scss
@@ -4,6 +4,10 @@
       @apply ml-sm
     }
 }
+
+.employee .citizen-home-footer {
+  @apply fixed bottom-0;
+}
 .fill-path-primary-main{
   path{
     fill: #F47738;
